add initial changes

--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
   <title>Mercy Ndambu</title>
-  <link href="css/styles.css" ref="stylesheet" type="text/css">
 </head>
 <body>
   <h1>Mercy Ndambu</h1>
   <h2>This is my porfolio</h2>
-  
+
+  <img src="image//image.jpg"
+  <p> <strong>ABOUT ME</strong> </P>
+  <p>Am Mercy Ndambu. I come from a family of six members, we are four girls with no brother and I am the last child. We are from a Kamba culture.</p>
+  <p>
 </body>
 </html>
