add initial changes

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
   <img src="image//image.jpg"
   <p> <strong>ABOUT ME</strong> </P>
   <p>Am Mercy Ndambu. I come from a family of six members, we are four girls with no brother and I am the last child. We are from a Kamba culture.</p>
-  <p>
+  <p>My hobbies and interests include;</p>
+  <ul>
+    <li>Reading novels</li>
+    <li>Helping the needy</li>
+    <li>Travelling</li>
+    <li>Art work</li>
+    <li>Playing basket ball</li>
 </body>
 </html>
