add initial changes

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
   <h2>This is my porfolio</h2>
 
   <img src="image//image.jpg"
-  <p> <strong>ABOUT ME</strong> </P>
-  <p>Am Mercy Ndambu. I come from a family of six members, we are four girls with no brother and I am the last child. We are from a Kamba culture.</p>
+  <p><strong>ABOUT ME</strong></P>
+  <p>Am Mercy Ndambu. I come from a family of six members, we are four girls with no brother and I am the last of twins. We are from a Kamba culture.</p>
+  <p>I went to Fadhili Junior School in Umoja II where i sat for my KCPE in the year 2014. I went to Apostolic Carmel Girls' where i sat for my KCSE in 2018. I am currently studying coding at Moringa School where i hope to aquire my goal of becoming an excellent coder. I plan on going to University to study for Criminology with IT.</p>
+  <div class="side-bar">
   <p>My hobbies and interests include;</p>
   <ul>
     <li>Reading novels</li>
@@ -19,5 +21,6 @@
     <li>Travelling</li>
     <li>Art work</li>
     <li>Playing basket ball</li>
+  </div>
 </body>
 </html>
